# ProjectHaloAndroid

./: LICENSE  README.md  build.gradle  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/thanics/andrew/halocontrol/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/thanics/andrew/halocontrol/: CanvasQuad.java  FlightActivity.kt  GstVrSurfaceView.java  MainActivity.java  MainActivity.kt  MediaLoader.java  Mesh.java  MonoscopicView.java  Reticle.java  SceneRenderer.java  StereoFlightActivity.java  StereoImageView.java  StereoStreamRenderer.java  Utils.java  VideoActivity.java  VideoUiView.java  VrMainActivity.java  VrStereoActivity.java  WorldLayoutData.java
app/src/main/java/com/thanics/andrew/halocontrol/MainScene/: MainActivity.java  MainMenuView.java  MainSceneRenderer.java  VrMainActivity.java
app/src/main/java/com/thanics/andrew/halocontrol/Stereo3DFlightScene/: GstVrSurfaceView.java  SideMenuView.java  Stereo3DFlightSceneRenderer.java  StereoFlightActivity.java  VrStereoActivity.java
app/src/main/java/com/thanics/andrew/halocontrol/rendering/: CanvasQuad.java  Mesh.java  Reticle.java  VideoQuad.java
app/src/main/jni/: Android.mk  Application.mk  GstreamerPipeline.cpp  GstreamerPipeline.h  gstreamer-pipeline.i  tutorial-3.c
app/src/main/res/layout/: activity_flight.xml  activity_main.xml  activity_stereo_flight.xml  activity_vr_main.xml  activity_vr_stereo.xml  gst_vr_surface.xml  video_activity.xml  video_ui.xml
app/src/main/res/mipmap-anydpi-v26/: halo_drone_app_icon_round.xml
app/src/main/res/values/: attrs.xml  halo_drone_logo_back.xml  strings.xml  styles.xml
app/src/test/java/com/thanics/andrew/halocontrol/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
